[tool.poetry]
name = "bluemoss"
version = "0.1.23"
description = "An easy way to scrape a website and capture the extracted data in Python dataclasses."
authors = ["lunchquader <luca@tabone.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nox = "^2023.4.22"
beautifulsoup4 = "^4.12.2"
lxml = "^4.9.3"
pytest = "^7.4.2"
setuptools = "^68.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
