[tool.poetry]
name = "bluemoss"
version = "1.0.0"
description = "An easy way to scrape the web."
authors = ["lunchquader <luca@tabone.io>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9.0"
beautifulsoup4 = "4.12.2"
lxml = [
    { version = "4.9.1", python = "3.9.*" },
    { version = "4.9.2", python = "3.10.*" },
    { version = "4.9.3", python = "3.11.*" },
    { version = "4.9.3", python = "3.12.*" }
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.blue]
line-length = 88

